--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -77,6 +77,9 @@ section.description {
 		margin: 30px;
 		padding: 20px;
 		border-radius: 50%;
+		&:hover {
+			cursor: pointer;
+		}
 	}
 
 	.center {
