--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -61,6 +61,7 @@ section.description {
 	margin: auto;
 	display: inline-block;
 	justify-content: center;
+	height: 50vh;
 	> img {
 		margin-bottom: 0px;
 		width: 30%;
@@ -74,11 +75,15 @@ section.description {
 		height: 100px;
 		background-color: rgba(255, 0, 0, 0.6);
 		display: inline-flex;
-		margin: 30px;
+		margin: 60px 20px 0 20px;
 		padding: 20px;
 		border-radius: 50%;
 		&:hover {
 			cursor: pointer;
+		}
+		@media (height < 1000px) {
+			margin: 20px;
+			padding: 20px;
 		}
 	}
 
@@ -86,8 +91,9 @@ section.description {
 		height: 30%;
 		justify-content: center;
 		align-items: center;
+		padding-top: 20px;
 		.message {
-			margin-top: 30px;
+			margin-top: 40px;
 			justify-content: center;
 			align-items: center;
 			font-size: 30px;
@@ -98,7 +104,7 @@ section.description {
 				font-size: 20px;
 			}
 			@media (height < 1000px) {
-				font-size: 20px;
+				font-size: 15px;
 			}
 		}
 	}
@@ -115,13 +121,13 @@ section.timer {
 		justify-content: center;
 		align-items: center;
 		font-size: 30px;
-		padding: 20px;
 		background-color: rgb(255, 255, 255);
 		border-radius: 15px;
+		
 	}
 	.clock {
 		display: flex;
-		margin-top: 50px;
+		margin-top: 30px;
 		.clockCase {
 			margin: 20px;
 			padding: 10px;
@@ -168,7 +174,7 @@ section.todolist {
 div.newTask {
 	display: flex;
 	> input {
-		padding: 10px 0 10px 20px;
+		padding: 10px 50px 10px 20px;
 		border-radius: 30px;
 		border: none;
 		text-align: left;
@@ -178,6 +184,9 @@ div.newTask {
 		box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 		:focus {
 			border: none;
+		}
+		@media (height < 1000px) {
+			font-size: 10px;
 		}
 	}
 	.button {
@@ -226,4 +235,7 @@ div.list {
 	justify-content: center;
 	margin: auto;
 	overflow: scroll;
+	@media (height < 1000px) {
+		height: 20vh;
+	}
 }
