fix boutton responsive OK

--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -211,6 +211,9 @@ div.newTask {
 			&:hover {
 				cursor: pointer;
 			}
+			@media (height < 1000px) {
+				margin-left: -50px;
+			}
 		}
 	}
 }
