color change OK

--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -115,8 +115,8 @@ section.description {
 			padding: 16px 32px;
 			border-radius: 16px;
 			background: #eeeeee;
-			box-shadow: inset 5px 5px 10px #d9d9d9,
-				inset -5px -5px 10px #ffffff;
+			box-shadow: 17px 17px 34px #e0e0e0,
+				-17px -17px 34px #fcfcfc;
 
 			@media (height < 1000px) {
 				margin-top: 0;
