color change OK

--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -185,9 +185,9 @@ section.timer {
 			padding: 10px;
 			display: flex;
 			border-radius: 16px;
-			background: #e4d9d2;
-			box-shadow: 5px 5px 10px #c6bdb7,
-				-5px -5px 10px #fff5ed;
+			background: #eeeeee;
+			box-shadow: 17px 17px 34px #e0e0e0,
+				-17px -17px 34px #fcfcfc;
 			width: 120px;
 			height: 150px;
 
